--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ html, body {
   margin: 0;
   min-height: 100vh;
   height: 100%;
-  background: #f8fafc;
+  background: black;
 }
 
 .dashboard-grid {
